--- a/README
+++ b/README
@@ -1,55 +1,49 @@
-mBART for Machine Translation
-This project leverages the power of the mBART (multilingual BART) model for machine translation tasks, with a potential focus on South Asian languages.
+# mBART for South Asian Languages
 
-What it Does
+## Overview
 
-Seamless Text Translation: Effortlessly translate text between various languages, potentially including South Asian languages supported by the mBART model.
-Multilingual Power (Optional): The mBART model, pre-trained on a massive dataset of text and code, enables translation between many languages, including potentially:
-Hindi (hi)
-Urdu (ur)
-Bengali (bn)
-Tamil (ta)
-Marathi (mr)
-Sinhala (si)
-Interactive Chatbot Interface (Optional): The project might include a user-friendly chatbot interface for interacting with the translation functionality (if chatbot.py exists).
-Getting Started
+This repository provides code for training and fine-tuning mBART (Multilingual BART) models tailored for South Asian languages. The focus is on translation and chatbot functionalities.
 
-Prerequisites:
+## Features
 
-Python 3.x ([link to Python download])
-Libraries specified in requirements.txt (You can install them using pip install -r requirements.txt)
-Transformers library ([link to Transformers library])
-Installation:
+- **Translation**: Scripts to fine-tune mBART for translation tasks between South Asian languages.
+- **Chatbot**: Implementation of a multilingual chatbot using mBART.
 
-Assuming you have Git installed, follow these steps to clone this repository:
+## Installation
 
-Bash
-git clone https://github.com/<repository_owner>/mBART.git
-Use code with caution.
-content_copy
-Replace <repository_owner> with the actual owner of the repository you obtained the code from.
+1. Clone the repository:
+    ```bash
+    git clone https://github.com/Maaagggi/mBART---South-asian.git
+    cd mBART---South-asian
+    ```
+2. Install the required packages:
+    ```bash
+    pip install -r requirements.txt
+    ```
 
-Running the Project:
+## Usage
 
-Execute the following command in the project directory to launch the application:
-
-Bash
+Run the backend:
+```bash
 python main.py
-Use code with caution.
-content_copy
-This command utilizes the main.py script. Refer to the project's code or logs for specific functionalities provided.
+```
 
-Project Structure
+## File Structure
 
-mBART/
-├── backend/  # Potential submodule containing backend code (if applicable)
-├── app.log  # Log file for the application
-├── app.py  # Core application logic file
-├── chatbot.py  # File for chatbot interface (if applicable)
-├── logs/  # Directory containing log files
-│  └── translation.log  # Log file for translation processes
-├── main.py  # Script for running the translation application
-├── Makefile  # File defining automated tasks (optional)
-├── requirements.txt  # List of required Python libraries
-├── translation.log  # Log file for translation processes
-└── translation.py  # File for translation functionality using mBART
+- `translation.py`: Script for translating text between languages.
+- `chatbot.py`: Script for running a chatbot using mBART.
+- `main.py`: Entry point for additional functionalities.
+
+## Contributing
+
+Feel free to fork the repository, make improvements, and submit pull requests. 
+
+## License
+
+This project is licensed under the MIT License.
+
+## Contact
+
+For any inquiries, please contact [Maaagggi](https://github.com/Maaagggi).
+
+---
